# Riti-backend

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  ngnix.conf  pyproject.toml  requirements.txt
firstapp/: admin.py  urls.py
firstapp/migrations/: 0001_initial.py
mainpage/: models.py  serializers.py  urls.py  views.py
mainpage/migrations/: 0001_initial.py
mysite/: settings.py  urls.py
ritiecom/: apps.py  models.py  serializers.py  views.py
ritiweb/: admin.py  apps.py
